# Offisim

./: .env.example  .gitignore  .gitnexusignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  GEMINI.md  LICENSE  PRELAUNCH_AUDIT_2026-06-10.md  README.md  SECURITY.md  biome.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-creation-flow.mjs  test-detailed.mjs  test-final.mjs  test-playwright.mjs  tsconfig.base.json  turbo.json
.ai/loops/: gpt55-audit-remediation.md  offisim-prelaunch-clean-slate-runtime-dramaturgy-loop.md  offisim-sample-company-dramaturgy-claude-execution.md  offisim-verified-iteration-loop.md
.claude/: MEMORY.md  launch.json
.claude/orchestrator/: manifest.json
.claude/plans/: tranquil-shimmying-clock-agent-aa435ac17171a9997.md
.claude/skills/: offisim-test-patterns.md  offisim-workspace-ia.md  runtime-policy-guard.md  studio-editor-design.md
.codex-audits/ui-ux-2026-06-07/: notes.md
.codex/environments/: environment.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: run-goal-capability-qa.mjs  run-goal-node-capability-qa.mjs
.github/workflows/: ci.yml  release-desktop.yml  release.yml
.husky/: pre-commit
.live-verify/: 3d-polish-label-overlap-report.json  3d-polish-prefab-variants-report.json  3d-polish-production-audit.md
.live-verify/add-chat-attachment-end-to-end/: HANDOFF.md  archive-gate-2026-05-05.md  cross-platform-parity-sample-pdf-2026-05-05.json  gc-cascade-tauri-desktop-2026-05-05.json  gc-cascade-web-2026-05-05.json  tauri-native-dragdrop-fallback-2026-05-05.json  tauri-release-attachment-layout-2026-05-05.json  tauri-release-desktop-input-2026-05-05.json
.live-verify/add-skills-self-authoring/: background-record.md  verify-record.md
.live-verify/bucket-2b-rotation/: verify-record.md  window-id-video-test.mov
.serena/: project.yml
Docs/: CODEBASE_MAP.md  DELEGATION_ARCHITECTURE.md  FEATURES.md  HARNESS_ARCHITECTURE.md  SYSTEM_FRAMEWORK.md  UI_FRAMEWORK_STACK.md  business-logic-map.md  cleanup-exemptions.md  document-truth-ledger.md  live-verify-bugs-2026-06-30.md  live-verify-report-2026-06-30.md  live-verify-report-2026-07-12-shell-lane.md  live-verify-report-2026-07-18-r3-onboarding.md  live-verify-report-2026-07-18-r5-depth.md  platform-deployment-gates.md  ui-ux-audit-2026-04-06.md  ux-transparency-spec-2026-04-12.md
Docs/00_start_here/: README.md  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: codex-app-server.manifest.json
apps/desktop/src-tauri/capabilities/: agent-bridges.json  codex-pets.json  deep-link-install.json  default.json  distribution.json  fs-shell.json  github.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: agent-bridges.toml  codex-pets.toml  deep-link-install.toml  distribution.toml  fs-shell.toml  github.toml
apps/desktop/src-tauri/resources/: codex-agent-host.mjs
apps/desktop/src-tauri/src/: agent_host_runtime.rs  agent_host_stream.rs  app_update.rs  attachment_store.rs  browser_agent_gateway.rs  browser_agent_tools.rs  browser_session.rs  builtin_tools.rs  claude_agent_host.rs  codex_agent_host.rs  codex_pets.rs  computer_driver.rs  deep_link.rs  engine_skill_overlay.rs  env_scrub.rs  escape_forwarder.rs  gh.rs  git.rs  in_flight.rs  kanban.rs  lib.rs  llm_transport.rs  local_db.rs  local_paths.rs  local_secret.rs  main.rs  pi_agent_host.rs  preview.rs  process_group.rs  provider_secrets.rs  redaction.rs  resume.rs  runtime_secrets.rs  sessions.rs  shell_classifier.rs  sidecar_stderr.rs  stage_audit.rs  startup_safety.rs  task_workspace_binding.rs  terminal_session.rs  (+2 more)
apps/desktop/src-tauri/src/binding/: persistence.rs  project_crud.rs  registry.rs  resume_compat.rs
apps/desktop/src-tauri/src/builtin/: proc_probe.rs  sandbox_path.rs  shell.rs
apps/desktop/src-tauri/src/claude_agent_host/: commands.rs  mod.rs
apps/desktop/src-tauri/src/codex_agent_host/: commands.rs  manager.rs  mod.rs  protocol.rs  run_options.rs  stream.rs  types.rs
apps/desktop/src-tauri/src/git/: allowlist.rs  checkpoint.rs  exec.rs  lease.rs  worktree.rs
apps/desktop/src-tauri/src/mcp_bridge/: commands.rs  error.rs  health.rs  jsonrpc_framer.rs  mod.rs  process_manager.rs  registry_store.rs  types.rs
apps/desktop/src-tauri/src/pi_agent_host/: bridge.rs  lsp_diagnostics_extension.mjs  mod.rs  payload.rs  provider.rs  run.rs  stream.rs  tests.rs  types.rs  wire.rs  workspace_files.rs
apps/desktop/src-tauri/tests/: engine_skill_overlay_security.rs
docker/: docker-compose.yml  platform.Dockerfile  web.Dockerfile
openspec/: harness-capability-map.md  protocols-ledger.md  provider-lane-matrix.md  roadmap-debt-ledger.md
output/: runtime_probe.mjs
patches/: @langchain__langgraph@1.2.9.patch
scripts/: agent-run-usage.mjs  ai-account-catalog.mjs  ai-model-catalog.mjs  audit-production-dependencies.mjs  build-agent-host-lib.mjs  build-character-assets.mjs  build-character-hair-assets.mjs  build-claude-agent-host.mjs  build-codex-agent-host.mjs  build-pi-agent-host.mjs  build-runtime-deps.mjs  build-signed-dmg.mjs  check-agent-runtime-capabilities.mjs  check-attachment-capabilities.mjs  check-biome-warning-ratchet.mjs  check-codex-app-server-artifact.mjs  check-codex-app-server-bundle.mjs  check-cross-package-src-imports.mjs  check-docs-truth.mjs  check-local-schema-drift.mts  check-model-catalog-freshness.mjs  check-pi-wire-contract.mjs  check-platform-migration-drift.mjs  check-platform-tauri-origin-sync.mjs  check-provider-policy.sh  check-redaction-pattern-sync.mjs  check-tailwind-theme.mjs  check-tauri-command-hygiene.mjs  check-ui-framework-hygiene.mjs  check-ui-ux-drift.mjs  claude-workspace-guard.mjs  copy-pdf-worker.mjs  derive-character-action-clips.mjs  dev-all.mjs  dev-config.mjs  dev-config.test.mjs  emit-tailwind-theme.mjs  ensure-port-free.mjs  eval-suite-live-ledger.mts  eval-suite.mts  (+194 more)
spec/: DESIGN_RULES.md  ENGINEERING_RULES.md  PROJECT_CONSTITUTION.md  UX_RULES.md
(+2327 files in other folders)
