[package]
name = "offisim-desktop"
version = "0.0.1"
description = "AI Company Simulator — Desktop Runtime"
edition = "2021"

[lib]
name = "offisim_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` feature unlocks `window.open_devtools()` and right-click → Inspect
# on RELEASE builds too. Without it `open_devtools()` is a silent no-op in
# release, which blocks live verify from Offisim.app bundles (Computer Use
# only attaches to `.app`, not to `target/debug/offisim-desktop`). Keep until
# a dedicated non-devtools release channel is needed for ship.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tauri-plugin-cors-fetch = "5"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "1"
rand = "0.8"
libc = "0.2"
# Reqwest pinned to 0.13 to reuse the copy Tauri already pulls transitively.
# `default-features = false` strips native-tls and reqwest's default cookie /
# compression stack; the features we actually need are stream (bytes_stream),
# rustls-tls (matches Tauri's own TLS choice), and json.
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls", "json"] }
futures-util = "0.3"
once_cell = "1"
