[package]
name = "offisim-desktop"
version = "1.1.2"
description = "AI Company Simulator — Desktop Runtime"
edition = "2021"

[lib]
name = "offisim_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[features]
# Ship channel builds WITHOUT devtools: `pnpm --filter @offisim/desktop build`
# must not allow right-click → Inspect / console JS on the release `.app`.
# Live-verify builds opt back in via `pnpm --filter @offisim/desktop
# build:devtools` (passes `--features devtools` to cargo) because Computer Use
# only attaches to `.app` bundles, not `target/debug/offisim-desktop` binaries.
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "=2.11.5", features = ["unstable"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tauri-plugin-cors-fetch = "5"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2.4.3", features = ["deep-link"] }
url = "2"
chrono = { version = "0.4.45", default-features = false }
serde = { version = "1", features = ["derive"] }
# preserve_order: local_db_select returns rows as JSON objects and the renderer
# reconstructs positional columns from key order — it must match the SELECT
# projection (same contract tauri-plugin-sql provided via IndexMap).
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "1"
rand = "0.8"
tempfile = "3.27.0"
# At-rest secret sealing for renderer-held tokens (local_secret.rs, S1/S2/S3).
# chacha20poly1305 0.10.x is the current stable RustCrypto AEAD release
# (0.11 is still an -rc as of 2026-06-24); base64 0.22 is the latest stable.
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
libc = "0.2"
# Reqwest pinned to 0.13 to reuse the copy Tauri already pulls transitively.
# `default-features = false` strips native-tls and reqwest's default cookie /
# compression stack; the features we actually need are stream (bytes_stream),
# rustls-tls (matches Tauri's own TLS choice), and json.
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "rustls", "json"] }
futures-util = "0.3"
# The per-run browser MCP gateway reuses Hyper, hyper-util, and http-body-util,
# already present in Tauri's locked HTTP graph. Direct dependencies expose only
# the HTTP/1 server + Tokio adapter needed for the loopback listener.
hyper = { version = "1.11.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1.20", default-features = false, features = ["http1", "server", "tokio"] }
http-body-util = "0.1.4"
once_cell = "1"
dirs = "6"
sha2 = "0.10"
hex = "0.4"
semver = "1"
regex = "1"
ignore = "0.4.28"
globset = "0.4.18"
unicode-normalization = "0.1"
infer = "0.19"
portable-pty = "=0.9.0"
image = { version = "0.25.10", default-features = false, features = ["webp"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSEvent",
  "NSWindowRestoration",
  "NSWindow",
  "block2",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSUserDefaults"] }
objc2 = "0.6"
block2 = "0.6"
objc2-web-kit = { version = "=0.3.2", default-features = false, features = ["WKWebView"] }

[dev-dependencies]
tauri = { version = "=2.11.5", features = ["test"] }
